--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -13,7 +13,7 @@ ion-title {
     font-size: 28px;
     margin-top: 12px;
     text-align: center;
-    margin-left: 15px;
+    margin-left: 3rem;
     color: #fff;
 }
 
