--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -50,7 +50,7 @@
                         <ion-button class="export" (click)="export()" size=small>Export</ion-button>
                     </ion-col>
                     <ion-col size=4>
-                        <ion-button class="reset"  (click)="resetForm()" size=small>Reset</ion-button>
+                        <ion-button class="reset" (click)="resetForm()" size=small>Reset</ion-button>
                     </ion-col>
 
                 </ion-row>
@@ -80,10 +80,24 @@
                     <td>₹ {{order.advance}}</td>
                     <td>₹ {{order.balance}}</td>
                     <td>{{order.delivery_status}}</td>
-                    <td>
+                    <!-- <td>
                         <ion-button class="export" (click)="getdetails(order._id)" size=small>click</ion-button>
+                    </td> -->
+                    <td>
+                        <table>
+                            <tr>
+                                <td style="border:1px solid black;">
+                                    <ion-icon class="create" name="create"></ion-icon>
+                                </td>
+                                <td style="border:1px solid black;">
+                                    <ion-icon class="save" name="save"></ion-icon>
+                                </td>
+                                <td style="border:1px solid black;">
+                                    <ion-icon class="print" name="print"></ion-icon>
+                                </td>
+                            </tr>
+                        </table>
                     </td>
-
                 </tr>
             </table>
         </div>
