--- a/src/app/pages/orders/orders.page.scss
+++ b/src/app/pages/orders/orders.page.scss
@@ -13,7 +13,7 @@ ion-title {
     font-size: 28px;
     margin-top: 12px;
     text-align: center;
-    margin-left: 15px;
+    margin-left: 5rem;
     color: #fff;
 }
 
@@ -101,4 +101,16 @@ tr:nth-child(even) {
 
 .order {
     text-align: center;
+}
+
+.create {
+    color: black;
+}
+
+.save {
+    color: black;
+}
+
+.print {
+    color: black;
 }
