--- a/src/app/pages/report/report.page.html
+++ b/src/app/pages/report/report.page.html
@@ -31,6 +31,14 @@
                                 </ion-item>
                             </ion-col>
                         </ion-row>
+                        <ion-row class="branch">
+                            <ion-col size=8>
+                                <ion-item>
+                                    <ion-label>Branch Wise Report</ion-label>
+                                    <ion-radio slot="start" color="success" value="Monthly Report"></ion-radio>
+                                </ion-item>
+                            </ion-col>
+                        </ion-row>
                     </ion-radio-group>
                 </ion-list>
                 <ion-row class="dates">
